Remove body omission when content-length is absent
Leave that logic to responders, which may have different requirements